--- a/targeting.html
+++ b/targeting.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,9 +6,35 @@
 
     <!-- Inline styles go between style tags -->
     <style>
+        h1{
+            color: red;
+        }
 
+        form > p{
+            color: green;
+        }
 
+        label{
+            font-weight: bold;
+        }
+/*Selectors can be combined via sibling
+ */
+        Label+input{
+            clear:both;
+            display:block;
+        }
+
+        label ~ input{
+            clear:both;
+            display:block;
+        }
+
+        button{
+            color:blue;
+            background-color: green;
+        }
     </style>
+
 
 
 </head>
