--- a/targeting.html
+++ b/targeting.html
@@ -33,6 +33,12 @@
             color:blue;
             background-color: green;
         }
+
+        input[type="text"]{
+            background: red;
+        }
+
+
     </style>
 
 
