--- a/vtsd.html
+++ b/vtsd.html
@@ -59,6 +59,7 @@
             height: 359px;
             background-color: #f2f2f2;
             float: left;
+            margin: 10px 7px 10px 7px;
         }
 
 
@@ -81,8 +82,13 @@
         <div class="card">A Card</div>
         <div class="card">A Card</div>
         <div class="card">A Card</div>
+        </div>
 
     <div class="upcomingEvents">header</div>
+    <!---Padding/Margin
+        <div style="border: 1px solid black; padding: 25px; background-color: darkgray">Paddings Example</div>
+        <div style="border: 1px solid black; padding: 25px; background-color: darkgray">Margins Example</div>
+         -->
 
 
 </body>
