--- a/vtsd.html
+++ b/vtsd.html
@@ -62,6 +62,12 @@
             margin: 10px 7px 10px 7px;
         }
 
+        cardImage{
+            width: 100%;
+            height: auto;
+            padding-top: 30px;
+        }
+
 
 
 
@@ -75,7 +81,7 @@
     <div class="sliderNav">header</div>
     <div class="cardHolder">
 
-        <div class="card">A Card</div>
+        <div class="card"><img onauxclick="cardImage" src="../Image/" </div>
         <div class="card">A Card</div>
         <div class="card">A Card</div>
         <div class="card">A Card</div>
